# aas-tools

./: .coveragerc  .env  .flake8  README.md  compose.yaml  pyproject.toml
aas/: WST_A_1.json
config/: aas-environment.yml  aas-registry.yml
src/aastools/: __main__.py  services.py  settings.py  upload.py
src/aastools/cli/: main.py  parser.py
src/aastools/cli/commands/: info.py  nuke.py  shell.py  submodel.py  upload.py
src/aastools/crud/: shells.py  submodels.py
src/shellsmith/: __main__.py  services.py  settings.py  upload.py
src/shellsmith/cli/: main.py
src/shellsmith/cli/commands/: info.py  shell.py  submodel.py
src/shellsmith/crud/: __init__.py  shells.py  submodels.py
tests/: conftest.py  test_crud.py  test_upload.py  test_utils.py
